--- a/mobile.css
+++ b/mobile.css
@@ -87,7 +87,7 @@
     }
 
     #header-leftSide {
-        background-color: rgba(23, 46, 96, 0.95);
+        background-color: rgba(23, 46, 96, 0.90);
         position: absolute;
         width: 100%;
         height: 100%;
@@ -146,6 +146,7 @@
     #navigationBar_logo {
         height: 80%;
         display: flex;
+        margin-left: 5px;
     }
 
 
@@ -154,7 +155,7 @@
         padding: 2px;
     }
 
-    #navigationBar_logoText {
+    .navigationBar_logoText {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -163,6 +164,10 @@
         font-family: 'Montserrat', sans-serif;
 
         background-color: white;
+    }
+
+    .navigationBar_logoText-scrolled {
+        font-size: 1.8rem;
     }
 
     .navigationBar_logoTextItem1 {
@@ -201,11 +206,11 @@
     }
 
     .hamburgerMenuLine {
-        height: 1.5px;
+        height: 2px;
         width: 30px;
         background-color: rgba(23, 46, 96, 0.95);
         border-radius: .75px;
-        margin: 4px auto;
+        margin: 3px auto;
     }
 
     .firstSection_inner {
@@ -217,7 +222,7 @@
     .thirdSection_inner,
     .fourthSection_inner,
     #testSection {
-        padding: 50px 30px;
+        padding: 50px 40px;
     }
 
     .text {
@@ -392,12 +397,14 @@
         color: var(--lightColour);
         font-size: 1.1rem;
         font-weight: 500;
+        text-align: left;
     }
 
     .footerLogo-textbox-2 {
         color: var(--darkColour);
         font-size: 1.1rem;
         font-weight: 500;
+        text-align: left;
     }
 
     .footerHeadline {
