--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     --mainFont: 'Montserrat', sans-serif;
     --maintFont: "Poppins", sans-serif;
     --contentWidth: 80%;
-    --maxWidth: 1400px;
+    --maxWidth: 1300px;
 }
 
 * {
@@ -29,6 +29,7 @@
         z-index: 1;
         display: flex;
         align-items: center;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.30);
     }
 
     .navigationBarScrolled {
@@ -39,7 +40,7 @@
 
         width: var(--contentWidth);
         max-width: var(--maxWidth);
-        margin: 20px auto;
+        margin: 10px auto;
 
         display: flex;
         justify-content: space-between;
@@ -61,13 +62,17 @@
         height: 100%;
     }
 
-    #navigationBar_logoText {
+    .navigationBar_logoText {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        font-size: 1.8rem;
+        justify-content: center;
+        font-size: 1.5rem;
         transition: .4s;
         font-family: 'Montserrat', sans-serif;
+    }
+
+    .navigationBar_logoText-scrolled {
+        font-size: 1rem;
     }
 
     .navigationBar_logoTextItem1 {
@@ -134,6 +139,7 @@
 
     #header-leftSide {
         background-color: rgba(23, 46, 96, 0.95);
+        background-color: rgba(11, 33, 79, 0.95);
         position: absolute;
         width: 50%;
         height: 100%;
