--- a/mobile.css
+++ b/mobile.css
@@ -87,7 +87,7 @@
     }
 
     #header-leftSide {
-        background-color: rgba(23, 46, 96, 0.80);
+        //background-color: rgba(23, 46, 96, 0.80);
         position: absolute;
         width: 100%;
         height: 100%;
