--- a/mobile.css
+++ b/mobile.css
@@ -72,7 +72,7 @@
         max-height: 500px;
         background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
         background-size: cover;
-        background-attachment: fixed;
+        //background-attachment: fixed;
     }
 
     #header {
@@ -87,7 +87,7 @@
     }
 
     #header-leftSide {
-        //background-color: rgba(23, 46, 96, 0.80);
+        background-color: rgba(23, 46, 96, 0.90);
         position: absolute;
         width: 100%;
         height: 100%;
