--- a/mobile.css
+++ b/mobile.css
@@ -70,8 +70,8 @@
         flex-direction: column;
         //height: 100vh;
         height: 2500px;
-        background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
-        background-size: cover;
+        //background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
+        //background-size: cover;
         //background-attachment: fixed;
     }
 
