--- a/mobile.css
+++ b/mobile.css
@@ -6,7 +6,7 @@
         font-family: var(--mainFont);
         font-family: 'Taviraj', serif;
         font-weight: 400;
-        font-size: 2.6rem;
+        font-size: 2.8rem;
         color: white;
         line-height: 3.2rem;
         color: white;
@@ -22,10 +22,10 @@
     }
 
     h3 {
-        color: #e5e5e5;
+        color: rgba(229, 229, 229, 0.80);
         font-family: var(--mainFont);
         line-height: 1.4rem;
-        font-size: 1rem;
+        font-size: .9rem;
         font-weight: 400;
     }
 
@@ -71,7 +71,6 @@
         height: 500px;
         background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
         background-size: cover;
-        background-attachment: fixed;
     }
 
     #header {
@@ -159,7 +158,7 @@
         flex-direction: column;
         justify-content: center;
         font-size: 1.1rem;
-        font-weight: 500;
+        font-weight: 700;
         transition: .4s;
         font-family: 'Montserrat', sans-serif;
         gap: 2px;
@@ -207,10 +206,10 @@
 
     .hamburgerMenuLine {
         height: 2px;
-        width: 30px;
+        width: 32px;
         background-color: rgba(23, 46, 96, 0.95);
         border-radius: .75px;
-        margin: 3px auto;
+        margin: 3.5px auto;
     }
 
     .firstSection_inner {
