--- a/mobile.css
+++ b/mobile.css
@@ -41,7 +41,7 @@
         color: var(--darkColour);
         font-family: var(--mainFont);
         font-family: 'Taviraj', serif;
-        font-size: 2rem;
+        font-size: 2.2rem;
         line-height: 2.5rem;
         font-weight: 400;
         margin: 12px 0;
@@ -158,7 +158,7 @@
         flex-direction: column;
         justify-content: center;
         font-size: 1.1rem;
-        font-weight: 700;
+        font-weight: 500;
         transition: .4s;
         font-family: 'Montserrat', sans-serif;
         gap: 2px;
@@ -221,7 +221,7 @@
     .thirdSection_inner,
     .fourthSection_inner,
     #testSection {
-        padding: 50px 35px;
+        padding: 50px 25px;
     }
 
     .text {
@@ -298,7 +298,7 @@
     .testSection_inner {
         display: flex;
         flex-direction: column;
-        gap: 50px;
+        gap: 30px;
         max-width: var(--maxWidth);
         margin-top: 35px;
     }
@@ -306,6 +306,10 @@
     .testSection_sub {
         display: flex;
         gap: 25px;
+
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.03);
+        padding: 10px;
     }
 
     .testSection_subPic {
@@ -370,6 +374,7 @@
 
     .footerBox {
         margin: 0 auto;
+        height: 60px;
     }
 
     .footerLogo {
@@ -378,12 +383,13 @@
         width: fit-content;
         padding: 5px 12px 5px 2px;
         display: flex;
-
+        height: 100%;
     }
 
     .footerLogo-logobox {
         display: flex;
         align-items: center;
+        height: 100%;
     }
 
     .footerLogo-textbox {
