--- a/mobile.css
+++ b/mobile.css
@@ -138,7 +138,7 @@
         justify-content: space-between;
         align-items: center;
         transition: .4s;
-        height: 80px;
+        height: 75px;
     }
 
     #navigationBar_logo {
@@ -163,10 +163,6 @@
         font-family: 'Montserrat', sans-serif;
         gap: 2px;
         background-color: white;
-    }
-
-    .navigationBar_logoText-scrolled {
-        font-size: 1.8rem;
     }
 
     .navigationBar_logoTextItem1 {
@@ -308,7 +304,7 @@
         gap: 25px;
 
         border-radius: 5px;
-        background-color: rgba(0, 0, 0, 0.03);
+        background-color: rgba(0, 0, 0, 0.02);
         padding: 10px;
     }
 
@@ -374,7 +370,6 @@
 
     .footerBox {
         margin: 0 auto;
-        height: 60px;
     }
 
     .footerLogo {
@@ -383,7 +378,7 @@
         width: fit-content;
         padding: 5px 12px 5px 2px;
         display: flex;
-        height: 100%;
+        height: 60px;
     }
 
     .footerLogo-logobox {
@@ -436,9 +431,42 @@
 
     .footerSocialTabs {
         color: white;
-        font-size: 2.2rem;
+        font-size: 2.6rem;
         display: flex;
         justify-content: center;
         gap: 15px;
     }
+
+
+
+
+
+
+
+
+    .backToTop {
+        color: white;
+        position: fixed;
+        bottom: 20px;
+        right: -50px;
+        z-index: 100;
+        border-radius: 4px;
+        transition: .2s;
+        font-size: 1.2rem;
+
+        border: solid 1px white;
+        height: 46px;
+        width: 46px;
+        display: flex;
+        background-color: var(--darkColour);
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .backToTopScrolled {
+        right: 20px;
+    }
+
 }
