--- a/mobile.css
+++ b/mobile.css
@@ -61,8 +61,77 @@
         margin: 40px auto 60px auto;
         display: block;
         font-size: .8rem;
+    }
+
+    .closeButton {
+        position: relative;
+        border: solid 1px var(--darkColour);
+        background-color: red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: fit-content;
+        padding: 20px;
+        cursor: pointer;
+    }
+
+    .closeButton_line1 {
+        height: 2px;
+        background-color: var(--darkColour);
+        width: 30px;
+        transform: rotate(45deg);
+        position: absolute;
 
     }
+
+    .closeButton_line2 {
+        height: 2px;
+        background-color: var(--darkColour);
+        width: 30px;
+        transform: rotate(-45deg);
+        position: absolute;
+
+    }
+
+    /*********** OVERLAY ***********/
+
+    .overlay {
+        position: fixed;
+
+        overflow-y: scroll;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 0;
+        background-color: rgba(0, 0, 0, 0.99);
+        transition: ease-out .2s;
+        z-index: 1001;
+        overflow-x: hidden;
+
+        background-size: cover;
+        border: outline 4px white;
+
+    }
+
+    .overlayShow {
+        position: fixed;
+
+        z-index: 2;
+        background-color: var(--darkColour);
+        height: 100%;
+        width: 100%;
+
+        display: block;
+
+    }
+
+    .tro {
+        opacity: 1;
+        transform: translateY(0px);
+        transition: 1s;
+    }
+
+    /*********** HEADER ************/
 
     #headerWrapper {
         position: relative;
@@ -411,7 +480,7 @@
         color: white;
         font-weight: bold;
         margin-bottom: 6px;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
 
     .footerHeadlineSocial {
@@ -425,7 +494,7 @@
 
     .footerText {
         color: white;
-        font-size: .9rem;
+        font-size: 1rem;
         line-height: 1.4rem;
     }
 
