--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1300px) {
 
     /****** TYPOGRAPHY *********/
 
@@ -64,9 +64,10 @@
     }
 
     .closeButton {
-        position: relative;
-        border: solid 1px var(--darkColour);
-        background-color: red;
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -77,7 +78,7 @@
 
     .closeButton_line1 {
         height: 2px;
-        background-color: var(--darkColour);
+        background-color: white;
         width: 30px;
         transform: rotate(45deg);
         position: absolute;
@@ -86,7 +87,7 @@
 
     .closeButton_line2 {
         height: 2px;
-        background-color: var(--darkColour);
+        background-color: white;
         width: 30px;
         transform: rotate(-45deg);
         position: absolute;
@@ -98,37 +99,62 @@
     .overlay {
         position: fixed;
 
-        overflow-y: scroll;
         top: 0;
         right: 0;
         bottom: 0;
         width: 0;
-        background-color: rgba(0, 0, 0, 0.99);
-        transition: ease-out .2s;
+        background-color: #02102F;
         z-index: 1001;
         overflow-x: hidden;
+        overflow: hidden;
 
         background-size: cover;
         border: outline 4px white;
+        transition: .2s;
 
+        background-image: url("src/logo.png");
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .overlayShow {
-        position: fixed;
-
-        z-index: 2;
-        background-color: var(--darkColour);
-        height: 100%;
-        width: 100%;
-
-        display: block;
-
+        width: 100% !important;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
-    .tro {
-        opacity: 1;
-        transform: translateY(0px);
-        transition: 1s;
+    .overlayHeader {
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+    }
+
+    .overlayLogo {
+        height: 70%;
+        width: fit-content;
+        background-color: white;
+        border-radius: 2px;
+        padding: 5px;
+    }
+
+    .overlayNavigation {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        padding: 50px;
+    }
+
+    .overlayNavigation-item {
+        font-family: var(--mainFont);
+        font-size: 2.2rem;
+        font-weight: 800;
+        color: white;
     }
 
     /*********** HEADER ************/
@@ -259,10 +285,6 @@
         border-radius: 3px;
         height: 50px;
         transition: .2s;
-    }
-
-    .hamburgerMenu:active {
-        background-color: rgba(0, 0, 0, 0.4);
     }
 
     .hamburgerMenuScrolled {
