--- a/tablet.css
+++ b/tablet.css
@@ -1,1 +1,1 @@
-@media only screen and (min-width: 601px) and (max-width: 1300px) {}
+//@media only screen and (min-width: 601px) and (max-width: 1300px) {}
