--- a/mobile.css
+++ b/mobile.css
@@ -110,7 +110,7 @@
 
         background-size: cover;
         border: outline 4px white;
-        transition: .2s;
+        transition: ease-out .2s;
 
         background-image: url("src/logo.png");
 
@@ -289,6 +289,11 @@
         border-radius: 3px;
         height: 50px;
         transition: .2s;
+    }
+
+    .hamburgerMenu:active {
+        background-color: rgba(255, 255, 255, 0);
+        border: none;
     }
 
     .hamburgerMenuScrolled {
