--- a/mobile.css
+++ b/mobile.css
@@ -132,6 +132,9 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+
+        height: 100vh;
+        min-height: 600px;
     }
 
     .overlayLogo {
@@ -215,6 +218,7 @@
         width: 100%;
         height: 100%;
         z-index: 0;
+        background-color: rgba(11, 33, 79, 0.95);
     }
 
     .information {
