--- a/mobile.css
+++ b/mobile.css
@@ -108,21 +108,28 @@
         overflow-x: hidden;
         overflow: hidden;
 
-        background-size: cover;
         border: outline 4px white;
         transition: ease-out .2s;
 
-        background-image: url("src/logo.png");
 
         display: flex;
         flex-direction: column;
+        background-image: url("src/logo.png");
+        background-size: cover;
+    }
+
+    .overlayInner {
+        height: 100vh;
+        min-height: 600px;
+
+        background-color: rgba(2, 16, 47, 0.79);
+
     }
 
     .overlayShow {
         width: 100% !important;
         overflow-y: scroll;
         overflow-x: hidden;
-        min-height: 600px;
     }
 
     .overlayHeader {
