--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --mainColour: #0071C7;
-    --darkColour: #172E60;
+    --darkColour: #02102F;
     --lightColour: #4598F1;
     --verylightColour: #E6F1FA;
     --mainFont: 'Josefin Sans', sans-serif;
@@ -32,11 +32,10 @@
         z-index: 1;
         display: flex;
         align-items: center;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.30);
     }
 
     .navigationBarScrolled {
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.06);
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
     }
 
     .navigationBar_inner {
@@ -141,10 +140,10 @@
     }
 
     #header-leftSide {
-        background-color: rgba(23, 46, 96, 0.95);
         background-color: rgba(11, 33, 79, 0.95);
+        background-color: rgba(11, 33, 79, 1);
         position: absolute;
-        width: 50%;
+        width: 55%;
         height: 100%;
         z-index: 0;
     }
@@ -294,7 +293,8 @@
     }
 
     .aboutMeWrapper {
-        width: 1000px;
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
         border-radius: 20px;
         display: flex;
         border-radius: 20px;
@@ -551,9 +551,10 @@
     }
 
     .testSection_inner {
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
         display: flex;
         justify-content: space-around;
-        width: 90%;
         max-width: var(--maxWidth);
         margin: 50px auto 0 auto;
     }
@@ -571,6 +572,7 @@
         gap: 22px;
         width: 350px;
         margin-top: 3rem;
+        padding: 20px 0;
     }
 
     .testSection_subPic {
