--- a/mobile.css
+++ b/mobile.css
@@ -124,6 +124,7 @@
         background-color: rgba(2, 16, 47, 0.79);
         display: flex;
         flex-direction: column;
+        border: solid 4px black;
     }
 
     .overlayShow {
@@ -152,7 +153,7 @@
         flex-direction: column;
         justify-content: flex-start;
         gap: 30px;
-        padding: 50px 50px;
+        padding: 50px 0px;
         height: 65%;
     }
 
@@ -164,6 +165,10 @@
 
         opacity: 0;
         transform: translateY(100px);
+
+        padding: 10px;
+        width: 100%;
+        text-align: center;
     }
 
     .overlayFooter {
