--- a/mobile.css
+++ b/mobile.css
@@ -328,6 +328,8 @@
 
         background-color: transparent;
         border: none;
+        border-radius: 50%;
+        padding: 2px;
     }
 
     .hamburgerMenu:active {
@@ -492,7 +494,7 @@
 
 
     #footer {
-        background-color: var(--darkColour);
+        background-color: var(--ultraDarkColour);
         width: 100%;
     }
 
