--- a/mobile.css
+++ b/mobile.css
@@ -154,7 +154,7 @@
         justify-content: flex-start;
         gap: 30px;
         padding: 50px 0px;
-        height: 65%;
+        height: 73%;
     }
 
     .overlayNavigation-item {
@@ -174,8 +174,8 @@
     .overlayFooter {
         position: relative;
         margin: 0 auto;
-        width: 80%;
-        height: 15%;
+        width: 70%;
+        height: 12%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -329,13 +329,13 @@
         background-color: transparent;
         border: none;
         border-radius: 50%;
-        padding: 2px;
     }
 
     .hamburgerMenu:active {
         background-color: transparent;
         outline: none;
         border: none;
+        background-color: rgba(0, 0, 0, 0.05);
     }
 
     .hamburgerMenuScrolled {
@@ -363,7 +363,7 @@
     }
 
     .text {
-        line-height: 1.5rem;
+        line-height: 1.8rem;
         font-family: var(--mainFont);
     }
 
