--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@
         display: flex;
         justify-content: space-around;
         max-width: var(--maxWidth);
-        margin: 50px auto 0 auto;
+        margin: 0 auto;
     }
 
     .footerSocialTabs {
