--- a/mobile.css
+++ b/mobile.css
@@ -134,7 +134,9 @@
     }
 
     .overlayHeader {
-        height: 20%;
+        position: absolute;
+        top: 0;
+        right: 0;
         display: flex;
         align-items: center;
         justify-content: flex-end;
@@ -151,10 +153,10 @@
     .overlayNavigation {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         gap: 30px;
         padding: 50px 0px;
-        height: 73%;
+        height: 100vh;
     }
 
     .overlayNavigation-item {
@@ -172,10 +174,12 @@
     }
 
     .overlayFooter {
-        position: relative;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
         margin: 0 auto;
         width: 70%;
-        height: 12%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -184,6 +188,7 @@
 
     .overlayFooter-social {
         color: white;
+        padding: 20px;
         font-size: 2.5rem;
         display: flex;
         justify-content: center;
