--- a/mobile.css
+++ b/mobile.css
@@ -61,6 +61,12 @@
         margin: 40px auto 60px auto;
         display: block;
         font-size: .8rem;
+
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: 25px auto;
     }
 
     .closeButton {
@@ -71,9 +77,10 @@
         flex-direction: column;
         align-items: center;
         width: fit-content;
-        padding: 20px;
+        padding: 35px;
         cursor: pointer;
-        margin: 18px;
+        background-color: black;
+        border-bottom-left-radius: 50%;
     }
 
     .closeButton_line1 {
@@ -372,7 +379,9 @@
         font-family: var(--mainFont);
     }
 
-    #secondSection {}
+    #secondSection {
+        position: relative;
+    }
 
     .secondSection_inner {
         background-color: var(--verylightColour);
@@ -383,8 +392,8 @@
         position: relative;
         height: 250px;
         padding: 0 20px;
-        max-width: 300px;
-        margin: 0 auto;
+        max-width: 400px;
+        margin: 60px auto;
     }
 
     .aboutMeImageBox img {
@@ -444,6 +453,7 @@
         gap: 30px;
         max-width: var(--maxWidth);
         margin-top: 35px;
+        margin: 40px 0;
     }
 
     .testSection_sub {
