--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --maintFont: "Poppins", sans-serif;
     --contentWidth: 80%;
     --maxWidth: 1300px;
+    --maxWidth: 1100px;
 }
 
 * {
@@ -36,7 +37,7 @@
     }
 
     .navigationBarScrolled {
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+        border-bottom: solid 1px rgba(0, 0, 0, 0.1);
     }
 
     .navigationBar_inner {
@@ -144,7 +145,7 @@
         background-color: rgba(11, 33, 79, 0.95);
         background-color: rgba(11, 33, 79, 1);
         position: absolute;
-        width: 55%;
+        width: 50%;
         height: 100%;
         z-index: 0;
     }
@@ -222,7 +223,7 @@
     .text {
         font-family: var(--mainFont);
         color: var(--darkColour);
-        font-size: 1rem;
+        font-size: 1.1rem;
         font-weight: 500;
         line-height: 1.8rem;
         width: 80%;
@@ -248,7 +249,11 @@
     }
 
     #content > section {
-        padding: 80px 0;
+        padding: 40px 0;
+    }
+
+    #firstSection {
+        //padding: 0;
     }
 
     .firstSection_inner {
@@ -260,7 +265,7 @@
 
     .sectionLeft {
         position: relative;
-        width: 50%;
+        width: 70%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -279,7 +284,7 @@
     }
 
     .sectionRight {
-        width: 50%;
+        width: 30%;
         display: flex;
         justify-content: center;
     }
@@ -448,7 +453,6 @@
     .fourthSection_inner h5,
     #testSection h5 {
         text-align: center;
-        margin-bottom: 30px;
     }
 
     .fourthSection_itemWrapper {
@@ -571,7 +575,7 @@
     .testSection_sub {
         display: flex;
         gap: 22px;
-        width: 350px;
+        width: 320px;
         margin-top: 3rem;
         padding: 20px 0;
     }
