--- a/mobile.css
+++ b/mobile.css
@@ -2,6 +2,10 @@
 
     /****** TYPOGRAPHY *********/
 
+    body {
+        min-width: 350px;
+    }
+
     h1 {
         font-family: var(--mainFont);
         font-family: 'Taviraj', serif;
@@ -58,7 +62,7 @@
         outline: none;
         border: none;
         width: fit-content;
-        margin: 40px auto 60px auto;
+        margin: 80px auto 80px auto;
         display: block;
         font-size: .8rem;
 
@@ -66,7 +70,7 @@
         bottom: 0;
         right: 0;
         left: 0;
-        margin: 25px auto;
+        margin: 40px auto;
     }
 
     .closeButton {
@@ -393,7 +397,7 @@
         height: 250px;
         padding: 0 20px;
         max-width: 400px;
-        margin: 60px auto;
+        margin: 60px auto 80px auto;
     }
 
     .aboutMeImageBox img {
