--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --maintFont: "Poppins", sans-serif;
     --contentWidth: 80%;
     --maxWidth: 1300px;
-    --maxWidth: 1100px;
+    --maxWidth: 1200px;
 }
 
 * {
@@ -30,10 +30,14 @@
         background-color: white;
         position: fixed;
         top: 0;
-        width: 100%;
+        width: 1200px;
         z-index: 1;
         display: flex;
+        left: 0;
+        right: 0;
         align-items: center;
+        margin: 20px auto 20px auto;
+        border-radius: 5px;
     }
 
     .navigationBarScrolled {
@@ -42,14 +46,16 @@
 
     .navigationBar_inner {
 
-        width: var(--contentWidth);
-        max-width: var(--maxWidth);
+        //width: var(--contentWidth);
+        //max-width: var(--maxWidth);
         margin: 10px auto;
 
         display: flex;
         justify-content: space-between;
         transition: .4s;
         height: 70px;
+        width: 100%;
+        padding: 0 20px;
     }
 
     .navigationBar-innerScrolled {
@@ -142,10 +148,10 @@
     }
 
     #header-leftSide {
-        background-color: rgba(11, 33, 79, 0.95);
-        background-color: rgba(11, 33, 79, 1);
+        background-color: rgba(0, 0, 0, 0.4);
+        //background-color: rgba(11, 33, 79, 1);
         position: absolute;
-        width: 50%;
+        width: 100%;
         height: 100%;
         z-index: 0;
     }
@@ -153,10 +159,12 @@
     #header_headlineWrapper {
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: center;
         gap: 20px;
         position: relative;
-        max-width: calc(var(--contentWidth)/2);
+        //max-width: calc(var(--contentWidth)/2);
+        margin: 0 auto;
     }
 
 
@@ -185,7 +193,8 @@
         color: white;
         line-height: 5.5rem;
         color: white;
-        //text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+        //text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
+        text-align: center;
     }
 
     h2 {
@@ -202,6 +211,8 @@
         line-height: 1.8rem;
         font-size: 1rem;
         font-weight: 400;
+        width: 500px;
+        text-align: center;
     }
 
     h4 {
@@ -561,7 +572,7 @@
         display: flex;
         justify-content: space-around;
         max-width: var(--maxWidth);
-        margin: 0 auto;
+        margin: 0 auto 60px auto;
     }
 
     .footerSocialTabs {
