--- a/style.css
+++ b/style.css
@@ -38,10 +38,14 @@
         align-items: center;
         margin: 20px auto 20px auto;
         border-radius: 5px;
+        transition: ease-out .2s;
     }
 
     .navigationBarScrolled {
         border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 0;
     }
 
     .navigationBar_inner {
@@ -55,7 +59,8 @@
         transition: .4s;
         height: 70px;
         width: 100%;
-        padding: 0 20px;
+        padding: 0 5px;
+        max-width: var(--maxWidth);
     }
 
     .navigationBar-innerScrolled {
@@ -99,6 +104,7 @@
         display: flex;
         align-items: center;
         gap: 60px;
+        padding: 0 30px;
     }
 
     #navigationBar_menuItem {
@@ -148,7 +154,7 @@
     }
 
     #header-leftSide {
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgba(0, 0, 0, 0.3);
         //background-color: rgba(11, 33, 79, 1);
         position: absolute;
         width: 100%;
