--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
     --maintFont: "Poppins", sans-serif;
     --contentWidth: 80%;
     --maxWidth: 1300px;
-    --maxWidth: 1200px;
 }
 
 * {
@@ -30,14 +29,10 @@
         background-color: white;
         position: fixed;
         top: 0;
-        width: 1200px;
+        width: 100%;
         z-index: 1;
         display: flex;
-        left: 0;
-        right: 0;
         align-items: center;
-        margin: 20px auto 20px auto;
-        border-radius: 5px;
         transition: ease-out .2s;
     }
 
@@ -50,17 +45,15 @@
 
     .navigationBar_inner {
 
-        //width: var(--contentWidth);
-        //max-width: var(--maxWidth);
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
         margin: 10px auto;
 
         display: flex;
         justify-content: space-between;
         transition: .4s;
-        height: 70px;
-        width: 100%;
+        height: 60px;
         padding: 0 5px;
-        max-width: var(--maxWidth);
     }
 
     .navigationBar-innerScrolled {
@@ -154,7 +147,7 @@
     }
 
     #header-leftSide {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
         //background-color: rgba(11, 33, 79, 1);
         position: absolute;
         width: 100%;
