--- a/mobile.css
+++ b/mobile.css
@@ -382,6 +382,7 @@
         line-height: 1.8rem;
         font-size: 1rem;
         font-family: var(--mainFont);
+        color: red;
     }
 
     #secondSection {
