--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
     box-sizing: border-box;
 }
 
+html {
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+
 @media (min-width: 1301px) {
 
     .overlay {
