--- a/tablet.css
+++ b/tablet.css
@@ -1,1 +1,196 @@
-//@media only screen and (min-width: 601px) and (max-width: 1300px) {}
+@media only screen and (min-width: 601px) {
+
+
+
+    /****** TYPOGRAPHY ******/
+
+
+    h1 {
+        font-family: var(--mainFont);
+        font-family: 'Taviraj', serif;
+        font-weight: 400;
+        font-size: 4.5rem;
+        color: white;
+        line-height: 5.5rem;
+        color: white;
+        //text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
+        text-align: center;
+    }
+
+    h2 {
+        color: var(--darkColour);
+        font-family: var(--mainFont);
+        font-size: 1.2rem;
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+    }
+
+    h3 {
+        color: #e5e5e5;
+        font-family: var(--mainFont);
+        line-height: 1.8rem;
+        font-size: 1rem;
+        font-weight: 400;
+        width: 500px;
+        text-align: center;
+    }
+
+    h4 {
+        color: var(--mainColour);
+        font-size: 1.1rem;
+        font-family: var(--mainFont);
+        font-weight: 400;
+    }
+
+    h5 {
+        color: var(--darkColour);
+        font-family: var(--mainFont);
+        font-family: 'Taviraj', serif;
+        font-size: 3.8rem;
+        line-height: 4.5rem;
+        font-weight: 400;
+    }
+
+    #headerWrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        //max-height: 800px;
+        background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    #header {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+    }
+
+
+    #header_inner {
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
+        margin: 0 auto;
+        display: flex;
+    }
+
+    #header-leftSide {
+        background-color: rgba(0, 0, 0, 0.3);
+        //background-color: rgba(11, 33, 79, 1);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+    }
+
+    #header_headlineWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        position: relative;
+        //max-width: calc(var(--contentWidth)/2);
+        margin: 0 auto;
+    }
+
+    #firstSection {}
+
+    .firstSection_inner {
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
+        margin: 0 auto;
+        display: flex;
+    }
+
+    #secondSection {
+        position: relative;
+    }
+
+    .secondSection_inner {
+        background-color: var(--verylightColour);
+        background-color: #f7f7f7;
+    }
+
+
+    .aboutMeTextBox {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        //min-width: 800px;
+        margin: 0 auto;
+    }
+
+    .aboutMeTextBox .text {
+        width: 90%;
+    }
+
+    .aboutMeImageBox {
+        position: relative;
+        height: 250px;
+        padding: 0 20px;
+        max-width: 360px;
+        margin: 60px auto 80px auto;
+    }
+
+    .aboutMeImageBox img {
+        border-radius: 5px;
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.38);
+    }
+
+    .sectionLeft {
+        position: relative;
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        position: relative;
+
+        border-radius: 10px;
+    }
+
+    .sectionRight {
+        overflow: hidden;
+    }
+
+    .footer_inner {
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
+        margin: 0 auto;
+        display: flex;
+
+        justify-content: space-between;
+        font-family: var(--mainFont);
+    }
+
+    .footerLogo {
+        height: 120px;
+    }
+
+    .footerHeadline {
+        margin-bottom: 10px;
+        font-size: 1.2rem;
+    }
+
+    .footerText {
+        display: flex;
+        align-items: center;
+    }
+
+    .footerSocialTabs {
+        color: white;
+        font-size: 2.6rem;
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+
+}
