--- a/desktop.css
+++ b/desktop.css
@@ -6,7 +6,7 @@
 
     .navigationBar {
         font-family: var(--mainFont);
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.90);
         position: fixed;
         top: 0;
         width: 100%;
@@ -31,8 +31,8 @@
 
         display: flex;
         justify-content: space-between;
-        transition: .4s;
-        height: 80px;
+        transition: .2s;
+        height: 70px;
         padding: 0 5px;
     }
 
@@ -44,6 +44,11 @@
     #navigationBar_logo {
         height: 100%;
         display: flex;
+    }
+
+    #headerWrapper {
+        background-position: 0 -200px;
+        max-height: 100%;
     }
 
     #header-emptyTop {
@@ -60,13 +65,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        font-size: 1.5rem;
-        transition: .4s;
+        transition: .2s;
         font-family: 'Montserrat', sans-serif;
-    }
-
-    .navigationBar_logoText-scrolled {
-        font-size: 1rem;
     }
 
     .navigationBar_logoTextItem1 {
@@ -74,11 +74,25 @@
         overflow: hidden;
         font-weight: 500;
         font-family: arial;
+        font-size: 1.4rem;
+        transition: ease-out .2s;
+
     }
 
     .navigationBar_logoTextItem2 {
         color: black;
         overflow: hidden;
+        transition: ease-out .2s;
+        font-size: 1.2rem;
+    }
+
+    .navigationBar_logoTextItem1-scrolled {
+        font-size: .9rem;
+
+    }
+
+    .navigationBar_logoTextItem2-scrolled {
+        font-size: .7rem;
     }
 
     #navigationBar_menu {
@@ -97,7 +111,6 @@
 
     #header_inner {
         height: 100vh;
-        max-height: 800px;
         display: flex;
         align-items: center;
     }
@@ -365,7 +378,7 @@
     }
 
     #testSection {
-        height: 80vh;
+        height: 100vh;
         min-height: 500px;
         max-height: 600px;
         display: flex;
