--- a/style.css
+++ b/style.css
@@ -337,7 +337,6 @@ h5 {
     transition: .4s;
     font-family: 'Montserrat', sans-serif;
     gap: 2px;
-    background-color: white;
 }
 
 .navigationBar_logoTextItem1 {
@@ -630,7 +629,7 @@ h5 {
 
 .footerText {
     color: white;
-    font-size: 1rem;
+    font-size: .9rem;
     line-height: 1.4rem;
 }
 
