--- a/tablet.css
+++ b/tablet.css
@@ -56,7 +56,7 @@
         display: flex;
         flex-direction: column;
         height: 100vh;
-        //max-height: 800px;
+        max-height: 600px;
         background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
         background-size: cover;
         background-attachment: fixed;
