--- a/desktop.css
+++ b/desktop.css
@@ -37,7 +37,7 @@
     }
 
     .navigationBar-innerScrolled {
-        height: 40px;
+        height: 50px;
         margin: 10px auto;
     }
 
@@ -48,7 +48,7 @@
 
     #headerWrapper {
         background-position: 0 -200px;
-        max-height: 100%;
+        max-height: 1000px;
     }
 
     #header-emptyTop {
@@ -87,12 +87,12 @@
     }
 
     .navigationBar_logoTextItem1-scrolled {
-        font-size: .9rem;
+        font-size: 1rem;
 
     }
 
     .navigationBar_logoTextItem2-scrolled {
-        font-size: .7rem;
+        font-size: .9rem;
     }
 
     #navigationBar_menu {
@@ -128,7 +128,8 @@
         font-size: 1.1rem;
         font-weight: 500;
         line-height: 1.8rem;
-        width: 80%;
+        width: 90%;
+        max-width: 550px;
     }
 
     #content {
@@ -162,12 +163,18 @@
 
     #firstSection {
         height: 100vh;
-        max-height: 800px;
+        max-height: 700px;
         min-height: 500px;
 
         display: flex;
         align-items: center;
         overflow: hidden;
+    }
+
+    .firstSection_inner {
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
+        padding: 0;
     }
 
     .sectionLeft {
@@ -184,21 +191,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        right: 100px;
     }
 
     .sectionRight img {
         position: absolute;
+        height: 150%;
     }
 
     #secondSection {}
 
     .secondSection_inner {
-        height: 100vh;
+        //height: 100vh;
         min-height: 500px;
-        max-height: 600px;
+        //max-height: 600px;
         margin: 0 auto;
         background-color: var(--verylightColour);
         background-color: #f7f7f7;
+        width: 100%;
     }
 
     .aboutMeWrapper {
@@ -208,9 +218,9 @@
         display: flex;
         border-radius: 20px;
         justify-content: space-between;
-        margin: 0 auto;
+        margin: 50px auto;
         height: 100%;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .aboutMeWrapperBG {
@@ -224,21 +234,19 @@
         display: none;
     }
 
+    .aboutMeTextBox {
+        position: sticky;
+        top: 22%;
+        width: 50%;
+    }
+
     .aboutMeImageBox {
         position: relative;
         height: 100%;
-        max-height: 700px;
-        width: 45%;
-    }
-
-    .aboutMeImage {
-        background-image: url("src/aboutMe.jpg");
-        background-size: cover;
-        position: absolute;
-        //top: -50px;
-        width: 100%;
-        //height: 400px;
-        height: 100%;
+        //max-height: 700px;
+        width: 50%;
+        max-width: 100%;
+        margin: 0 auto;
     }
 
     .image1,
@@ -247,6 +255,7 @@
         overflow: hidden;
         border-radius: 8px;
         box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.35);
+        display: none;
     }
 
     .image1 {
@@ -393,7 +402,7 @@
     }
 
     .testSection_inner {
-        width: var(--contentWidth);
+        width: 85%;
         max-width: var(--maxWidth);
         display: flex;
         flex-direction: column;
@@ -412,9 +421,10 @@
     .testSection_sub {
         display: flex;
         gap: 22px;
-        width: 340px;
+        max-width: 350px;
+        padding: 20px;
         margin-top: 3rem;
-        background-color: transparent;
+        height: fit-content;
     }
 
     .testSection_subPic {
@@ -470,5 +480,92 @@
     .backToTop {
         display: none;
     }
+
+    .image-container {
+        background-color: red;
+        height: 1000px;
+        background-color: green;
+    }
+
+    .stickyContainer {
+        position: relative;
+        display: flex;
+        height: 1400px;
+        gap: 5px;
+    }
+
+    .stickyColumnLeft {
+        width: 50%;
+        height: 1360px;
+        position: relative;
+    }
+
+    .stickyColumnLeft .stickyColumn {
+        width: 100%;
+        height: 820px;
+
+        position: sticky;
+        top: 135px;
+    }
+
+    .stickyColumnRight {
+        width: 50%;
+        position: relative;
+        top: 450px;
+        height: 910px;
+    }
+
+    .stickyColumnRight .stickyColumn {
+        width: 100%;
+        height: 700px;
+
+        position: sticky;
+        top: 135px;
+    }
+
+    .stick1 {
+        width: 100%;
+        height: 200px;
+        background-image: url("src/aboutMe.jpg");
+        background-size: cover;
+
+        position: sticky;
+        top: 135px;
+    }
+
+    .stick2 {
+        width: 100%;
+        height: 200px;
+        background-image: url("src/training.jpg");
+        background-size: cover;
+
+        position: sticky;
+        top: 135px;
+    }
+
+    .stick3 {
+        height: 200px;
+        width: 100%;
+        background-image: url("src/training2.jpg");
+        background-size: cover;
+        background-position: center;
+        position: sticky;
+        top: 335px;
+        border-top: solid 5px #f7f7f7;
+    }
+
+    .stick4 {
+        height: 200px;
+        width: 100%;
+        background-image: url("src/winner.jpg");
+        background-size: cover;
+        background-position: center;
+        position: sticky;
+        top: 335px;
+
+        border-top: solid 5px #f7f7f7;
+    }
+
+
 
 }
