--- a/tablet.css
+++ b/tablet.css
@@ -55,7 +55,7 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 90vh;
         max-height: 600px;
         background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
         background-size: cover;
@@ -80,7 +80,7 @@
     }
 
     #header-leftSide {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.2);
         //background-color: rgba(11, 33, 79, 1);
         position: absolute;
         width: 100%;
@@ -99,27 +99,31 @@
         margin: 0 auto;
     }
 
-    #firstSection {}
+    #firstSection {
+        overflow: hidden;
+    }
 
     .firstSection_inner {
-        width: var(--contentWidth);
-        max-width: var(--maxWidth);
+        width: 90%;
         margin: 0 auto;
         display: flex;
+        position: relative;
+        padding: 70px 25px;
     }
 
     #secondSection {
         position: relative;
-    }
-
-    .secondSection_inner {
-        background-color: var(--verylightColour);
         background-color: #f7f7f7;
     }
 
+    .secondSection_inner {
+        width: 90%;
+        margin: 0 auto;
+        padding: 70px 25px;
+    }
 
     .aboutMeTextBox {
-        width: 50%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -145,18 +149,20 @@
 
     .sectionLeft {
         position: relative;
-        width: 70%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 20px;
+        gap: 0px;
         position: relative;
 
         border-radius: 10px;
     }
 
     .sectionRight {
-        overflow: hidden;
+        position: absolute;
+        display: block;
+        right: -80px;
     }
 
     .footer_inner {
