--- a/animations.css
+++ b/animations.css
@@ -1,7 +1,7 @@
 .moveUpRevealOverlay {
-    //opacity: .3;
-    //transition: opacity 2s;
-    //transform: translateY(200px);
+    opacity: 0;
+    transition: opacity 2s;
+    transform: translateX(-200px);
 }
 
 .moveRight {
@@ -12,6 +12,5 @@
 .active {
     opacity: 1;
     transition: opacity .6s ease-out, transform .8s ease-out;
-    transition-delay: opacity 1s;
     transform: translateX(0);
 }
