--- a/desktop.css
+++ b/desktop.css
@@ -10,7 +10,7 @@
         position: fixed;
         top: 0;
         width: 100%;
-        z-index: 1;
+        z-index: 2;
         display: flex;
         align-items: center;
         transition: ease-out .2s;
@@ -47,7 +47,6 @@
     }
 
     #headerWrapper {
-        background-position: 0 -200px;
         height: 100vh;
         min-height: 500px;
     }
@@ -125,12 +124,14 @@
         position: relative;
         width: 100%;
         bottom: 0;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
         display: flex;
         justify-content: center;
         color: white;
         font-family: var(--mainFont);
-        gap: 160px;
+        border-top: solid 1px rgba(0, 0, 0, 0.12);
+        gap: 80px;
+        display: none;
     }
 
     .headerContact {
@@ -138,6 +139,14 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+        gap: 3px;
+    }
+
+    .cutter {
+        height: 70%;
+        background-color: rgba(255, 255, 255, 0.26);
+        width: 1px;
+        margin: auto 0;
     }
 
     .headerContactContent {
@@ -157,8 +166,6 @@
         font-size: 1.1rem;
         font-weight: 500;
         line-height: 2rem;
-        width: 90%;
-        max-width: 550px;
     }
 
     #content {
@@ -206,15 +213,6 @@
         padding: 0;
     }
 
-    .sectionLeft {
-        width: 65%;
-        gap: 0;
-    }
-
-    .sectionLeft h5 {
-        width: 50%;
-    }
-
     .sectionRight {
         width: 35%;
         display: flex;
@@ -243,8 +241,10 @@
         position: absolute;
         top: 0;
         width: 70%;
+        width: 60%;
         height: 100%;
-        clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+        //clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
     }
 
     .firstSection-overlay {
@@ -257,14 +257,14 @@
 
     .secondSection_inner {
         margin: 0 auto;
-        background-color: var(--verylightColour);
-        background-color: var(--lightGrey);
+        //background-color: var(--verylightColour);
+        //background-color: var(--lightGrey);
         width: 100%;
     }
 
     .aboutMeWrapper {
-        width: 90%;
-        max-width: 1400px;
+        width: var(--contentWidth);
+        max-width: var(--maxWidth);
         border-radius: 20px;
         display: flex;
         border-radius: 20px;
@@ -286,7 +286,7 @@
     }
 
     .aboutMeTextBox {
-        position: sticky;
+        position: relative;
         width: 50%;
         top: 0;
 
@@ -302,94 +302,76 @@
         color: #e0e0e0;
     }
 
-    .aboutMeImageBox {
-        display: grid;
-        grid-template-columns: auto auto;
-        gap: 15px;
-        //background-color: #2196F3;
+    .imi {
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.26);
+        border-radius: 3px;
+    }
+
+    .aboutMeImageBoxWrapper {
+        display: flex;
         padding: 10px;
-        width: 50%;
+        width: 45%;
         max-width: 100%;
+        //width: 500px;
+        height: 500px;
+
+        gap: 14px;
     }
 
-    .aboutMeImageBox-image1,
-    .aboutMeImageBox-image2,
-    .aboutMeImageBox-image3,
-    .aboutMeImageBox-image4 {
-        position: relative;
-        font-size: 30px;
-        text-align: center;
-    }
-
-    .aboutMeImageBox-image1 img {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 70%;
-    }
-
-    .aboutMeImageBox-image2 img {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 70%;
-    }
-
-    .aboutMeImageBox-image3 img {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 70%;
-    }
-
-    .aboutMeImageBox-image4 img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 70%;
-    }
-
-
-
-    .image1,
-    .image2,
-    .image3 {
-        overflow: hidden;
-        border-radius: 8px;
-        box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.35);
-        display: none;
-    }
-
-    .image1 {
-        position: absolute;
-        height: 60%;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-    }
-
-    .image2 {
-        position: absolute;
-        height: 50%;
-        top: 0;
-        bottom: 0;
-        left: 250px;
-        margin: auto;
-    }
-
-    .image2 img {
-        height: 50%;
-        left: 250px;
-        margin: auto;
-        width: 200px;
+    .aboutMeImageBox {
+        width: 50%;
         height: 100%;
+
+
+        display: flex;
+        flex-direction: column;
+
+        position: relative;
+
+        padding: 0;
+        gap: 14px;
     }
 
-    .image3 {
-        position: absolute;
-        height: 50%;
-        display: none;
+    .aboutMeImageBox-first {
+
+        width: 100%;
+        height: 35%;
+
+        background-color: red;
+
+        background-image: url("src/aboutMe.jpg");
+        background-size: cover;
     }
+
+    .aboutMeImageBox-second {
+
+        background-image: url("src/training2.jpg");
+        background-size: cover;
+
+        background-color: red;
+
+        width: 100%;
+        height: 65%;
+    }
+
+    .aboutMeImageBox-third {
+        background-image: url("src/training.jpg");
+        background-size: cover;
+
+        background-color: red;
+        width: 100%;
+        height: 70%;
+    }
+
+    .aboutMeImageBox-fourth {
+        background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
+        background-size: cover;
+
+        width: 100%;
+        height: 50%;
+    }
+
+
 
     #thirdSection {
         height: 100vh;
@@ -565,6 +547,137 @@
         font-size: .9rem;
         color: var(--darkColour);
         font-weight: 400;
+    }
+
+    .yPhysioWrapper {
+        background-color: var(--ultraDarkColour);
+        width: 100%;
+        //border-radius: 15px;
+        margin: 0 auto;
+        box-shadow: 3px 3px 10px #a3a3a3;
+        padding: 120px 0;
+        display: flex;
+        flex-direction: column;
+        gap: 6rem;
+        border: solid 1px black;
+    }
+
+    .yPhysioHeader {
+        color: white;
+        font-size: 3.5rem;
+        text-align: center;
+
+    }
+
+    .yPhysioInner {
+        width: 90%;
+        max-width: var(--maxWidth);
+        margin: 0 auto;
+        gap: 0;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .yPhysio {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        max-width: 30%;
+    }
+
+    .headlineWrapper {
+        height: 55px;
+        position: absolute;
+        top: -26px;
+        left: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .headline {
+        position: relative;
+        color: white;
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        font-family: var(--mainFont);
+        text-align: left;
+        padding: 0 15px;
+        z-index: 1;
+    }
+
+    .borderLines {
+        background-color: var(--borderColour);
+        position: absolute;
+        transition: 2s;
+        border: solid .75px white;
+    }
+
+    .lineTop {
+        width: 0;
+        top: 0;
+        left: 0;
+    }
+
+    .lineTopShow {
+        width: 100%;
+    }
+
+    .lineRight {
+        height: 0;
+        right: 0;
+        opacity: 1;
+    }
+
+    .lineRightShow {
+        height: 100%;
+    }
+
+    .lineLeft {
+        height: 0;
+        width: 1px;
+
+        left: 0;
+    }
+
+    .lineLeftShow {
+        height: 100%;
+    }
+
+    .lineBottom {
+        width: 0;
+
+        bottom: 0;
+    }
+
+    .lineBottomShow {
+        width: 100%;
+    }
+
+    .showBorder {
+        opacity: 1;
+    }
+
+    .yPhysioContent {
+        color: white;
+        padding: 50px 25px 20px 25px;
+        font-size: .9rem;
+        line-height: 1.4rem;
+        font-family: var(--mainFont);
+        color: #e3e3e3;
+    }
+
+    .absoluteBox {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        //border: solid 1.5px #d8d8d8;
+
+        //top: 0.7rem;
     }
 
     #footer {
