--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
     --lightColour: #4598F1;
     --verylightColour: #E6F1FA;
     --lightGrey: rgba(0, 0, 0, 0.02);
+    --borderColour: #e3e3e3;
     --mainFont: 'Josefin Sans', sans-serif;
-    --mainFont: 'Taviraj', serif;
+    /* --mainFont: 'Taviraj', serif; */
     --mainFont: 'Montserrat', sans-serif;
-    --maintFont: "Poppins", sans-serif;
+    /* --maintFont: "Poppins", sans-serif; */
     --contentWidth: 80%;
-    --maxWidth: 1300px;
+    --maxWidth: 1200px;
 }
 
 * {
@@ -40,6 +41,8 @@ h1 {
     line-height: 3.2rem;
     color: white;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+
+    animation: 1s ease-out 0s 1 slideInFromLeft;
 }
 
 h2 {
@@ -425,6 +428,7 @@ h5 {
     background-color: var(--verylightColour);
     background-color: #f7f7f7;
     padding: 40px 25px;
+    padding-bottom: 110px;
 }
 
 .sectionRight {
@@ -479,7 +483,9 @@ h5 {
     display: none;
 }
 
-#thirdSection {}
+#thirdSection {
+    display: none;
+}
 
 #testSection h5 {
     text-align: center;
@@ -508,7 +514,7 @@ h5 {
 
     border-radius: 5px;
     background-color: var(--lightGrey);
-    padding: 10px;
+    padding: 15px;
 }
 
 .testSection_subPic {
@@ -669,6 +675,133 @@ h5 {
 
 .backToTopScrolled {
     right: 20px;
+}
+
+.yPhysioWrapper {
+    background-color: var(--ultraDarkColour);
+    background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
+    width: 100%;
+    //border-radius: 15px;
+    margin: 0 auto;
+    box-shadow: 3px 3px 10px #a3a3a3;
+    padding: 50px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    border: solid 1px black;
+}
+
+.yPhysioHeader {
+    font-family: var(--mainFont);
+    font-family: 'Taviraj', serif;
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.yPhysioInner {
+    width: 90%;
+    max-width: var(--maxWidth);
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 70px;
+}
+
+.yPhysio {
+    position: relative;
+    display: flex;
+    //flex-direction: column;
+    //align-items: center;
+    //gap: 10px;
+    max-width: 100%;
+}
+
+.headlineWrapper {
+    height: 55px;
+    position: absolute;
+    top: -26px;
+    left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--ultraDarkColour);
+    z-index: 1;
+}
+
+.headline {
+    position: relative;
+    color: white;
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+    font-family: var(--mainFont);
+    text-align: left;
+    padding: 0 15px;
+    z-index: 1;
+}
+
+.borderLines {
+    background-color: var(--borderColour);
+    position: absolute;
+    transition: 2s;
+    border: solid 1px white;
+    z-index: 0;
+}
+
+.lineTop {
+    width: 0;
+    top: 0;
+    left: 0;
+}
+
+.lineTopShow {
+    width: 100%;
+}
+
+.lineRight {
+    height: 0;
+    right: 0;
+    opacity: 1;
+}
+
+.lineRightShow {
+    height: 100%;
+}
+
+.lineLeft {
+    height: 0;
+    width: 1px;
+
+    left: 0;
+}
+
+.lineLeftShow {
+    height: 100%;
+}
+
+.lineBottom {
+    width: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.lineBottomShow {
+    width: 100%;
+}
+
+.showBorder {
+    opacity: 1;
+}
+
+.yPhysioContent {
+    color: white;
+    padding: 50px 25px 20px 25px;
+    font-size: .9rem;
+    line-height: 1.4rem;
+    font-family: var(--mainFont);
+    color: #e3e3e3;
 }
 
 
