--- a/tablet.css
+++ b/tablet.css
@@ -51,6 +51,11 @@
         font-weight: 400;
     }
 
+    .yPhysioHeader {
+        width: 100%;
+        text-align: center:
+    }
+
     #headerWrapper {
         position: relative;
         display: flex;
