--- a/tablet.css
+++ b/tablet.css
@@ -56,6 +56,11 @@
         text-align: center:
     }
 
+
+    .yPhysioInner {
+        padding: 50px 0px 0px 0px;
+    }
+
     #headerWrapper {
         position: relative;
         display: flex;
